# Project_Phoenix

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
Documents/: Architecture1.md
phoenix-core/: .dockerignore  .env.example  .gitignore  Dockerfile  generate_test_data.py  make_chaos.py  pyproject.toml  requirements.txt  test_run.py
phoenix-core/docker/: docker-compose.yml
phoenix-core/models/: model_registry.json
phoenix-core/src/: app.py
phoenix-core/src/agents/: crews.py  graph.py  nodes.py  tools.py
phoenix-core/src/config/: llm.py
phoenix-core/src/domain/: models.py
phoenix-core/src/infrastructure/: llm_adapter.py  seed_playbooks.py  vector_store.py
phoenix-core/src/infrastructure/ingestion/: consumer.py  gateway.py
