[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "phoenix-core"
version = "0.1.0"
description = "Project Phoenix agentic pipeline"
requires-python = ">=3.12"
readme = "README.md"
 
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
 
[tool.ruff]
line-length = 100
target-version = "py312"
 
[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC", "SIM"]
ignore = []
 
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806"]
"__init__.py" = ["F401"]
 
[tool.ruff.lint.isort]
known-first-party = ["src"]
